--- a/ConfirmAlert/src/main/res/layout/dialog_confirm.xml
+++ b/ConfirmAlert/src/main/res/layout/dialog_confirm.xml
@@ -2,12 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fl_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="260dp"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:background="@drawable/confirm_bg"
@@ -17,42 +18,51 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="18dp"
             android:textColor="@android:color/black"
             android:textSize="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="标题" />
 
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_title"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="16dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="10dp"
             android:ellipsize="end"
             android:gravity="center"
-            android:maxLines="4"
+            android:lineSpacingExtra="3dp"
+            android:minHeight="46dp"
             android:textColor="#444444"
             android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/horizontal_divider"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
             tools:text="这事提示内容" />
 
         <View
             android:id="@+id/horizontal_divider"
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="40dp"
-            android:background="#D5D5D5" />
+            android:background="#D5D5D5"
+            app:layout_constraintBottom_toTopOf="@+id/barrier"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            app:barrierDirection="top"
+            app:constraint_referenced_ids="tv_cancel,tv_confirm" />
 
         <View
             android:id="@+id/vertical_divider"
@@ -62,32 +72,37 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#D5D5D5" />
+            android:background="#D5D5D5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_confirm" />
 
         <TextView
             android:id="@+id/tv_cancel"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_alignLeft="@+id/horizontal_divider"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@+id/vertical_divider"
             android:background="@android:color/transparent"
             android:gravity="center"
             android:text="取消"
             android:textColor="@drawable/press_textcolor"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/vertical_divider" />
 
         <TextView
             android:id="@+id/tv_confirm"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_alignRight="@+id/horizontal_divider"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/vertical_divider"
             android:background="@android:color/transparent"
             android:gravity="center"
             android:text="确定"
             android:textColor="@drawable/press_textcolor"
-            android:textSize="14sp" />
-    </RelativeLayout>
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/vertical_divider"
+            app:layout_constraintRight_toRightOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
